--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,4 @@
+include ':bms-android-sdk-release'
 rootProject.name = 'payment_app'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
