update bms skd android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -218,6 +218,12 @@ dependencies {
         implementation jscFlavor
     }
 
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
     // bms dependencies
     implementation project(':bms-android-sdk-release')
     implementation "com.android.support:design:27.1.1"
