--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "apk": "cd android && ./gradlew clean && ./gradlew assembleRelease"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native/normalize-color": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@types/react-native-snap-carousel": "^3.8.5",
+    "native-base": "^3.3.7",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-pager-view": "^5.4.11",
     "react-native-popup-dialog": "^0.18.3",
-    "react-native-safe-area-context": "^3.4.0",
+    "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.11.1",
     "react-native-snap-carousel": "^4.0.0-beta.5",
+    "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0"
   },
