--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,8 @@ target 'payment_app' do
   # you should disable the next line.
   use_flipper!()
 
+  pod 'MappedIn', '4.0.0'
+
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
